--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,8 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="url_pref">url_preference</string>
+    <string name="pref_title">Info</string>
+    <string name="listpref_summary">Select which site to get JSON data from</string>
+    <string name="default_url">https://www.pcs.cnu.edu/~kperkins/pets/</string>
 </resources>
